Refactor code structure for improved readability and maintainability

--- a/0_data_preparation.ipynb
+++ b/0_data_preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "2a3a4f33",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "aa256f9d",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "14111999",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "id": "b1539e07",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "id": "7be63a43",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "id": "d69ab791",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "id": "db33ac8a",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "id": "cc30975d",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "id": "5f7340cf",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "id": "f0f4cf84",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "id": "ea7196f5",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "id": "a7f37358",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "id": "a3fe4d96",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "[1 rows x 12 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "id": "ccecd848",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "id": "e68789d4",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "id": "232633b8",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "id": "6e3e2fce",
    "metadata": {},
    "outputs": [
@@ -871,13 +871,320 @@
        "[5 rows x 17 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a74c1471",
+   "metadata": {},
+   "source": [
+    "## Saving Processed Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "88b33555",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed data saved to data/processed/processed_data.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Views</th>\n",
+       "      <th>Likes</th>\n",
+       "      <th>Shares</th>\n",
+       "      <th>Comments</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Is_Weekend</th>\n",
+       "      <th>Likes_Per_View</th>\n",
+       "      <th>Shares_Per_View</th>\n",
+       "      <th>Comments_Per_View</th>\n",
+       "      <th>Engagement_Rate</th>\n",
+       "      <th>Platform_TikTok</th>\n",
+       "      <th>Platform_Twitter</th>\n",
+       "      <th>Platform_YouTube</th>\n",
+       "      <th>Hashtag_#Comedy</th>\n",
+       "      <th>Hashtag_#Dance</th>\n",
+       "      <th>Hashtag_#Education</th>\n",
+       "      <th>Hashtag_#Fashion</th>\n",
+       "      <th>Hashtag_#Fitness</th>\n",
+       "      <th>Hashtag_#Gaming</th>\n",
+       "      <th>Hashtag_#Music</th>\n",
+       "      <th>Hashtag_#Tech</th>\n",
+       "      <th>Hashtag_#Viral</th>\n",
+       "      <th>Content_Type_Post</th>\n",
+       "      <th>Content_Type_Reel</th>\n",
+       "      <th>Content_Type_Shorts</th>\n",
+       "      <th>Content_Type_Tweet</th>\n",
+       "      <th>Content_Type_Video</th>\n",
+       "      <th>Region_Brazil</th>\n",
+       "      <th>Region_Canada</th>\n",
+       "      <th>Region_Germany</th>\n",
+       "      <th>Region_India</th>\n",
+       "      <th>Region_Japan</th>\n",
+       "      <th>Region_UK</th>\n",
+       "      <th>Region_USA</th>\n",
+       "      <th>Engagement_Level_Encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4163464</td>\n",
+       "      <td>339431</td>\n",
+       "      <td>53135</td>\n",
+       "      <td>19346</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.081526</td>\n",
+       "      <td>0.012762</td>\n",
+       "      <td>0.004647</td>\n",
+       "      <td>9.893493</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4155940</td>\n",
+       "      <td>215240</td>\n",
+       "      <td>65860</td>\n",
+       "      <td>27239</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.051791</td>\n",
+       "      <td>0.015847</td>\n",
+       "      <td>0.006554</td>\n",
+       "      <td>7.419236</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3666211</td>\n",
+       "      <td>327143</td>\n",
+       "      <td>39423</td>\n",
+       "      <td>36223</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.089232</td>\n",
+       "      <td>0.010753</td>\n",
+       "      <td>0.009880</td>\n",
+       "      <td>10.986520</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>917951</td>\n",
+       "      <td>127125</td>\n",
+       "      <td>11687</td>\n",
+       "      <td>36806</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.138488</td>\n",
+       "      <td>0.012732</td>\n",
+       "      <td>0.040096</td>\n",
+       "      <td>19.131522</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64866</td>\n",
+       "      <td>171361</td>\n",
+       "      <td>69581</td>\n",
+       "      <td>6376</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.641769</td>\n",
+       "      <td>1.072688</td>\n",
+       "      <td>0.098295</td>\n",
+       "      <td>381.275244</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Views   Likes  Shares  ...  Region_UK  Region_USA  Engagement_Level_Encoded\n",
+       "0  4163464  339431   53135  ...       True       False                         1\n",
+       "1  4155940  215240   65860  ...      False       False                         0\n",
+       "2  3666211  327143   39423  ...      False       False                         1\n",
+       "3   917951  127125   11687  ...      False       False                         1\n",
+       "4    64866  171361   69581  ...      False       False                         2\n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Drop original non-numeric columns that are not needed for modeling\n",
+    "cols_to_drop = ['Post_Date', 'Engagement_Level']\n",
+    "df_final = df_encoded.drop(columns=cols_to_drop)\n",
+    "\n",
+    "# Save to CSV\n",
+    "output_path = 'data/processed/processed_data.csv'\n",
+    "df_final.to_csv(output_path, index=False)\n",
+    "print(f\"Processed data saved to {output_path}\")\n",
+    "display(df_final.head())"
    ]
   }
  ],
