data splliting and define features and targets

--- a/03_Modeling.ipynb
+++ b/03_Modeling.ipynb
@@ -43,6 +43,60 @@
     "except FileNotFoundError:\n",
     "    print(\"Processed data not found. Please run 01_Data_Preprocessing.ipynb first.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edcfc04c",
+   "metadata": {},
+   "source": [
+    "### 2. Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3d3a66c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Split and Scaled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define Features and Targets\n",
+    "# For Regression: Predict Engagement_Rate. We must drop Engagement_Rate (target) and Engagement_Level (leakage/irrelevant).\n",
+    "X_reg = df.drop(columns=['Engagement_Rate', 'Engagement_Level_Encoded'])\n",
+    "y_reg = df['Engagement_Rate']\n",
+    "\n",
+    "# For Classification: Predict Engagement_Level. We can use Engagement_Rate as a feature as it aggregates interactions.\n",
+    "X_clf = df.drop(columns=['Engagement_Level_Encoded'])\n",
+    "y_clf = df['Engagement_Level_Encoded']\n",
+    "\n",
+    "# Split Data for Regression\n",
+    "X_train_r, X_test_r, y_train_r, y_test_r = train_test_split(\n",
+    "    X_reg, y_reg, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Split Data for Classification\n",
+    "X_train_c, X_test_c, y_train_c, y_test_c = train_test_split(\n",
+    "    X_clf, y_clf, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Scale Features (Important for Linear/Logistic Regression)\n",
+    "scaler_r = StandardScaler()\n",
+    "X_train_r_scaled = scaler_r.fit_transform(X_train_r)\n",
+    "X_test_r_scaled = scaler_r.transform(X_test_r)\n",
+    "\n",
+    "scaler_c = StandardScaler()\n",
+    "X_train_c_scaled = scaler_c.fit_transform(X_train_c)\n",
+    "X_test_c_scaled = scaler_c.transform(X_test_c)\n",
+    "\n",
+    "print(\"Data Split and Scaled.\")"
+   ]
   }
  ],
  "metadata": {
