--- a/03_Modeling.ipynb
+++ b/03_Modeling.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "fa547895",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, RandomForestClassifier, GradientBoostingClassifier\n",
     "from xgboost import XGBRegressor, XGBClassifier\n",
     "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score, classification_report, confusion_matrix, f1_score\n",
-    "\n",
+    "from sklearn.model_selection import KFold\n",
     "# Load processed data\n",
     "try:\n",
     "    df = pd.read_csv('data/processed/processed_data.csv')\n",
@@ -96,6 +96,48 @@
     "X_test_c_scaled = scaler_c.transform(X_test_c)\n",
     "\n",
     "print(\"Data Split and Scaled.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb683377",
+   "metadata": {},
+   "source": [
+    "### 3. Regression Modeling (Predicting Engagement Rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "67c3c354",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_models = {\n",
+    "    'Linear Regression': LinearRegression(),\n",
+    "    'Random Forest': RandomForestRegressor(random_state=42),\n",
+    "    'Gradient Boosting': GradientBoostingRegressor(random_state=42),\n",
+    "    'XGBoost': XGBRegressor(random_state=42)\n",
+    "}\n",
+    "\n",
+    "reg_params = {\n",
+    "    'Linear Regression': {},\n",
+    "    'Random Forest': {\n",
+    "        'n_estimators': [100, 200],\n",
+    "        'max_depth': [10, 20, None],\n",
+    "        'min_samples_split': [2, 5]\n",
+    "    },\n",
+    "    'Gradient Boosting': {\n",
+    "        'n_estimators': [100, 200],\n",
+    "        'learning_rate': [0.05, 0.1],\n",
+    "        'max_depth': [3, 5]\n",
+    "    },\n",
+    "    'XGBoost': {\n",
+    "        'n_estimators': [100, 200],\n",
+    "        'learning_rate': [0.05, 0.1],\n",
+    "        'max_depth': [3, 5]\n",
+    "    }\n",
+    "}"
    ]
   }
  ],
