--- a/03_Modeling.ipynb
+++ b/03_Modeling.ipynb
@@ -139,6 +139,76 @@
     "    }\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd827df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training and Tuning Regression Models...\n",
+      "\n",
+      "Processing Linear Regression...\n",
+      "  Baseline CV R2: 1.0000 (+/- 0.0000)\n",
+      "  Test MSE: 0.0000, Test R2: 1.0000\n",
+      "\n",
+      "Processing Random Forest...\n",
+      "  Baseline CV R2: 0.9301 (+/- 0.0731)\n",
+      "  Tuning Random Forest...\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg_results = {}\n",
+    "best_reg_models = {}\n",
+    "\n",
+    "print(\"Training and Tuning Regression Models...\")\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "for name, model in reg_models.items():\n",
+    "    print(f\"\\nProcessing {name}...\")\n",
+    "    \n",
+    "    # Select data\n",
+    "    if name == 'Linear Regression':\n",
+    "        X_train = X_train_r_scaled\n",
+    "        X_test = X_test_r_scaled\n",
+    "    else:\n",
+    "        X_train = X_train_r\n",
+    "        X_test = X_test_r\n",
+    "        \n",
+    "    # K-Fold CV (Baseline)\n",
+    "    cv_scores = cross_val_score(model, X_train, y_train_r, cv=kf, scoring='r2')\n",
+    "    print(f\"  Baseline CV R2: {cv_scores.mean():.4f} (+/- {cv_scores.std():.4f})\")\n",
+    "    \n",
+    "    # GridSearchCV\n",
+    "    if reg_params[name]:\n",
+    "        print(f\"  Tuning {name}...\")\n",
+    "        grid = GridSearchCV(model, reg_params[name], cv=3, scoring='r2', n_jobs=-1)\n",
+    "        grid.fit(X_train, y_train_r)\n",
+    "        best_model = grid.best_estimator_\n",
+    "        print(f\"  Best Params: {grid.best_params_}\")\n",
+    "    else:\n",
+    "        best_model = model\n",
+    "        best_model.fit(X_train, y_train_r)\n",
+    "        \n",
+    "    best_reg_models[name] = best_model\n",
+    "    \n",
+    "    # Evaluate on Test Set\n",
+    "    preds = best_model.predict(X_test)\n",
+    "    mse = mean_squared_error(y_test_r, preds)\n",
+    "    r2 = r2_score(y_test_r, preds)\n",
+    "    \n",
+    "    reg_results[name] = {\n",
+    "        'CV Mean R2': cv_scores.mean(),\n",
+    "        'Test MSE': mse, \n",
+    "        'Test R2': r2\n",
+    "    }\n",
+    "    print(f\"  Test MSE: {mse:.4f}, Test R2: {r2:.4f}\")"
+   ]
   }
  ],
  "metadata": {
