define classification  models

--- a/03_Modeling.ipynb
+++ b/03_Modeling.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "fa547895",
    "metadata": {},
    "outputs": [
@@ -36,6 +36,8 @@
     "from xgboost import XGBRegressor, XGBClassifier\n",
     "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score, classification_report, confusion_matrix, f1_score\n",
     "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
     "# Load processed data\n",
     "try:\n",
     "    df = pd.read_csv('data/processed/processed_data.csv')\n",
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fd827df5",
    "metadata": {},
    "outputs": [
@@ -158,7 +160,21 @@
       "\n",
       "Processing Random Forest...\n",
       "  Baseline CV R2: 0.9301 (+/- 0.0731)\n",
-      "  Tuning Random Forest...\n"
+      "  Tuning Random Forest...\n",
+      "  Best Params: {'max_depth': 10, 'min_samples_split': 2, 'n_estimators': 100}\n",
+      "  Test MSE: 493854.1665, Test R2: 0.4605\n",
+      "\n",
+      "Processing Gradient Boosting...\n",
+      "  Baseline CV R2: 0.9333 (+/- 0.0741)\n",
+      "  Tuning Gradient Boosting...\n",
+      "  Best Params: {'learning_rate': 0.05, 'max_depth': 3, 'n_estimators': 200}\n",
+      "  Test MSE: 439839.7384, Test R2: 0.5195\n",
+      "\n",
+      "Processing XGBoost...\n",
+      "  Baseline CV R2: 0.5327 (+/- 0.2102)\n",
+      "  Tuning XGBoost...\n",
+      "  Best Params: {'learning_rate': 0.05, 'max_depth': 5, 'n_estimators': 100}\n",
+      "  Test MSE: 661703.2962, Test R2: 0.2771\n"
      ]
     }
    ],
@@ -208,6 +224,46 @@
     "        'Test R2': r2\n",
     "    }\n",
     "    print(f\"  Test MSE: {mse:.4f}, Test R2: {r2:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9574f2b4",
+   "metadata": {},
+   "source": [
+    "### 4. Classification Modeling (Predicting Engagement Level)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3bba58b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_models = {\n",
+    "    'Logistic Regression': LogisticRegression(max_iter=2000),\n",
+    "    'Random Forest': RandomForestClassifier(random_state=42),\n",
+    "    'Gradient Boosting': GradientBoostingClassifier(random_state=42),\n",
+    "    'XGBoost': XGBClassifier(random_state=42, use_label_encoder=False, eval_metric='mlogloss')\n",
+    "}\n",
+    "\n",
+    "clf_params = {\n",
+    "    'Logistic Regression': {'C': [0.1, 1, 10]},\n",
+    "    'Random Forest': {\n",
+    "        'n_estimators': [100, 200],\n",
+    "        'max_depth': [10, 20, None]\n",
+    "    },\n",
+    "    'Gradient Boosting': {\n",
+    "        'n_estimators': [100, 200],\n",
+    "        'learning_rate': [0.05, 0.1]\n",
+    "    },\n",
+    "    'XGBoost': {\n",
+    "        'n_estimators': [100, 200],\n",
+    "        'learning_rate': [0.05, 0.1],\n",
+    "        'max_depth': [3, 5]\n",
+    "    }\n",
+    "}"
    ]
   }
  ],
