--- a/03_Modeling.ipynb
+++ b/03_Modeling.ipynb
@@ -265,6 +265,140 @@
     "    }\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "88dac866",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training and Tuning Classification Models...\n",
+      "\n",
+      "Processing Logistic Regression...\n",
+      "  Baseline CV Accuracy: 0.9870 (+/- 0.0017)\n",
+      "  Tuning Logistic Regression...\n",
+      "  Best Params: {'C': 10}\n",
+      "  Test Accuracy: 0.9870, Test F1-Score: 0.9870\n",
+      "\n",
+      "Processing Random Forest...\n",
+      "  Baseline CV Accuracy: 0.9988 (+/- 0.0008)\n",
+      "  Tuning Random Forest...\n",
+      "  Best Params: {'max_depth': 20, 'n_estimators': 100}\n",
+      "  Test Accuracy: 1.0000, Test F1-Score: 1.0000\n",
+      "\n",
+      "Processing Gradient Boosting...\n",
+      "  Baseline CV Accuracy: 0.9992 (+/- 0.0006)\n",
+      "  Tuning Gradient Boosting...\n",
+      "  Best Params: {'learning_rate': 0.05, 'n_estimators': 100}\n",
+      "  Test Accuracy: 1.0000, Test F1-Score: 1.0000\n",
+      "\n",
+      "Processing XGBoost...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [23:26:25] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n",
+      "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [23:26:25] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n",
+      "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [23:26:25] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n",
+      "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [23:26:25] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n",
+      "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [23:26:25] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Baseline CV Accuracy: 0.9970 (+/- 0.0015)\n",
+      "  Tuning XGBoost...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [23:26:26] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Best Params: {'learning_rate': 0.05, 'max_depth': 3, 'n_estimators': 200}\n",
+      "  Test Accuracy: 0.9980, Test F1-Score: 0.9980\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf_results = {}\n",
+    "best_clf_models = {}\n",
+    "\n",
+    "print(\"Training and Tuning Classification Models...\")\n",
+    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "for name, model in clf_models.items():\n",
+    "    print(f\"\\nProcessing {name}...\")\n",
+    "    \n",
+    "    # Select data\n",
+    "    if name == 'Logistic Regression':\n",
+    "        X_train = X_train_c_scaled\n",
+    "        X_test = X_test_c_scaled\n",
+    "    else:\n",
+    "        X_train = X_train_c\n",
+    "        X_test = X_test_c\n",
+    "        \n",
+    "    # K-Fold CV (Baseline)\n",
+    "    cv_scores = cross_val_score(model, X_train, y_train_c, cv=skf, scoring='accuracy')\n",
+    "    print(f\"  Baseline CV Accuracy: {cv_scores.mean():.4f} (+/- {cv_scores.std():.4f})\")\n",
+    "    \n",
+    "    # GridSearchCV\n",
+    "    if clf_params[name]:\n",
+    "        print(f\"  Tuning {name}...\")\n",
+    "        grid = GridSearchCV(model, clf_params[name], cv=3, scoring='accuracy', n_jobs=-1)\n",
+    "        grid.fit(X_train, y_train_c)\n",
+    "        best_model = grid.best_estimator_\n",
+    "        print(f\"  Best Params: {grid.best_params_}\")\n",
+    "    else:\n",
+    "        best_model = model\n",
+    "        best_model.fit(X_train, y_train_c)\n",
+    "        \n",
+    "    best_clf_models[name] = best_model\n",
+    "    \n",
+    "    # Evaluate on Test Set\n",
+    "    preds = best_model.predict(X_test)\n",
+    "    acc = accuracy_score(y_test_c, preds)\n",
+    "    f1 = f1_score(y_test_c, preds, average='weighted')\n",
+    "    \n",
+    "    clf_results[name] = {\n",
+    "        'CV Mean Accuracy': cv_scores.mean(),\n",
+    "        'Test Accuracy': acc, \n",
+    "        'Test F1-Score': f1\n",
+    "    }\n",
+    "    print(f\"  Test Accuracy: {acc:.4f}, Test F1-Score: {f1:.4f}\")"
+   ]
   }
  ],
  "metadata": {
