--- a/03_Modeling.ipynb
+++ b/03_Modeling.ipynb
@@ -399,6 +399,195 @@
     "    }\n",
     "    print(f\"  Test Accuracy: {acc:.4f}, Test F1-Score: {f1:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fe3bb10",
+   "metadata": {},
+   "source": [
+    "### 5. Model Performance Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "63af7840",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Regression Model Performance ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CV Mean R2</th>\n",
+       "      <th>Test MSE</th>\n",
+       "      <th>Test R2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Linear Regression</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.080210e-24</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gradient Boosting</th>\n",
+       "      <td>0.933315</td>\n",
+       "      <td>4.398397e+05</td>\n",
+       "      <td>0.519514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>0.930108</td>\n",
+       "      <td>4.938542e+05</td>\n",
+       "      <td>0.460507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBoost</th>\n",
+       "      <td>0.532658</td>\n",
+       "      <td>6.617033e+05</td>\n",
+       "      <td>0.277147</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   CV Mean R2      Test MSE   Test R2\n",
+       "Linear Regression    1.000000  1.080210e-24  1.000000\n",
+       "Gradient Boosting    0.933315  4.398397e+05  0.519514\n",
+       "Random Forest        0.930108  4.938542e+05  0.460507\n",
+       "XGBoost              0.532658  6.617033e+05  0.277147"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Classification Model Performance ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CV Mean Accuracy</th>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <th>Test F1-Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>0.99875</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gradient Boosting</th>\n",
+       "      <td>0.99925</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBoost</th>\n",
+       "      <td>0.99700</td>\n",
+       "      <td>0.998</td>\n",
+       "      <td>0.998000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <td>0.98700</td>\n",
+       "      <td>0.987</td>\n",
+       "      <td>0.987017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     CV Mean Accuracy  Test Accuracy  Test F1-Score\n",
+       "Random Forest                 0.99875          1.000       1.000000\n",
+       "Gradient Boosting             0.99925          1.000       1.000000\n",
+       "XGBoost                       0.99700          0.998       0.998000\n",
+       "Logistic Regression           0.98700          0.987       0.987017"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(\"\\n--- Regression Model Performance ---\")\n",
+    "reg_df = pd.DataFrame(reg_results).T\n",
+    "display(reg_df.sort_values(by='Test R2', ascending=False))\n",
+    "\n",
+    "print(\"\\n--- Classification Model Performance ---\")\n",
+    "clf_df = pd.DataFrame(clf_results).T\n",
+    "display(clf_df.sort_values(by='Test Accuracy', ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa5cdeed",
+   "metadata": {},
+   "source": [
+    "### 6. Feature Importance Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73552a52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
