Feature Importance Analysis

--- a/03_Modeling.ipynb
+++ b/03_Modeling.ipynb
@@ -583,11 +583,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "73552a52",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Feature Importance Visualization\n",
+    "def plot_feature_importance(model, feature_names, title):\n",
+    "    if hasattr(model, 'feature_importances_'):\n",
+    "        importances = model.feature_importances_\n",
+    "    elif hasattr(model, 'coef_'):\n",
+    "        if model.coef_.ndim > 1:\n",
+    "            importances = np.abs(model.coef_[0])\n",
+    "        else:\n",
+    "            importances = np.abs(model.coef_)\n",
+    "    else:\n",
+    "        print(f\"Model {title} does not have feature importances.\")\n",
+    "        return\n",
+    "\n",
+    "    importances = np.array(importances).flatten()\n",
+    "    \n",
+    "    if len(importances) == 0:\n",
+    "        print(f\"No feature importances found for {title}\")\n",
+    "        return\n",
+    "\n",
+    "    print(f\"DEBUG: {title} Importances shape: {importances.shape}\")\n",
+    "    indices = np.argsort(importances)[::-1]\n",
+    "    top_n = min(10, len(importances))\n",
+    "    \n",
+    "    top_importances = importances[indices[:top_n]]\n",
+    "    top_feature_names = [feature_names[i] for i in indices[:top_n]]\n",
+    "    \n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.title(f\"Top {top_n} Feature Importances - {title}\")\n",
+    "    plt.bar(range(top_n), top_importances, align=\"center\")\n",
+    "    plt.xticks(range(top_n), top_feature_names, rotation=45, ha='right')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
