--- a/2_Feature_Engineering.ipynb
+++ b/2_Feature_Engineering.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "043955cc",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "f9613b81",
    "metadata": {},
    "outputs": [
@@ -237,12 +237,12 @@
    "id": "a7b2836f",
    "metadata": {},
    "source": [
-    "Date Features"
+    "#### Date Features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "48569b63",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "e51a368f",
    "metadata": {},
    "outputs": [
@@ -287,12 +287,12 @@
    "id": "616ac876",
    "metadata": {},
    "source": [
-    "Interaction Features\n"
+    "#### Interaction Features\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "1ad190d8",
    "metadata": {},
    "outputs": [
@@ -318,12 +318,12 @@
    "id": "d370722c",
    "metadata": {},
    "source": [
-    "Categorical Encoding (One-Hot Encoding)"
+    "#### Categorical Encoding (One-Hot Encoding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "1a61c88a",
    "metadata": {},
    "outputs": [
@@ -348,12 +348,12 @@
    "id": "2f246aaf",
    "metadata": {},
    "source": [
-    "Encode Target Variable for Classification (Engagement_Level)"
+    "#### Encode Target Variable for Classification (Engagement_Level)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "e7ee353f",
    "metadata": {},
    "outputs": [
@@ -371,6 +371,469 @@
     "# Low: Bottom 33%, Medium: Middle 33%, High: Top 33%\n",
     "df_encoded['Engagement_Level_Encoded'] = pd.qcut(df_encoded['Engagement_Rate'], q=3, labels=[0, 1, 2])\n",
     "print(\"Redefined Engagement_Level based on Engagement_Rate quantiles (0: Low, 1: Medium, 2: High).\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3ee5bb32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Post_Date</th>\n",
+       "      <th>Views</th>\n",
+       "      <th>Likes</th>\n",
+       "      <th>Shares</th>\n",
+       "      <th>Comments</th>\n",
+       "      <th>Engagement_Level</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Is_Weekend</th>\n",
+       "      <th>Likes_Per_View</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Content_Type_Tweet</th>\n",
+       "      <th>Content_Type_Video</th>\n",
+       "      <th>Region_Brazil</th>\n",
+       "      <th>Region_Canada</th>\n",
+       "      <th>Region_Germany</th>\n",
+       "      <th>Region_India</th>\n",
+       "      <th>Region_Japan</th>\n",
+       "      <th>Region_UK</th>\n",
+       "      <th>Region_USA</th>\n",
+       "      <th>Engagement_Level_Encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-13</td>\n",
+       "      <td>4163464</td>\n",
+       "      <td>339431</td>\n",
+       "      <td>53135</td>\n",
+       "      <td>19346</td>\n",
+       "      <td>High</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.081526</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-05-13</td>\n",
+       "      <td>4155940</td>\n",
+       "      <td>215240</td>\n",
+       "      <td>65860</td>\n",
+       "      <td>27239</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.051791</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-07</td>\n",
+       "      <td>3666211</td>\n",
+       "      <td>327143</td>\n",
+       "      <td>39423</td>\n",
+       "      <td>36223</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.089232</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-12-05</td>\n",
+       "      <td>917951</td>\n",
+       "      <td>127125</td>\n",
+       "      <td>11687</td>\n",
+       "      <td>36806</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.138488</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-03-23</td>\n",
+       "      <td>64866</td>\n",
+       "      <td>171361</td>\n",
+       "      <td>69581</td>\n",
+       "      <td>6376</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.641769</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Post_Date    Views   Likes  Shares  Comments Engagement_Level  Month  \\\n",
+       "0 2022-01-13  4163464  339431   53135     19346             High      1   \n",
+       "1 2022-05-13  4155940  215240   65860     27239           Medium      5   \n",
+       "2 2022-01-07  3666211  327143   39423     36223           Medium      1   \n",
+       "3 2022-12-05   917951  127125   11687     36806              Low     12   \n",
+       "4 2023-03-23    64866  171361   69581      6376           Medium      3   \n",
+       "\n",
+       "   DayOfWeek  Is_Weekend  Likes_Per_View  ...  Content_Type_Tweet  \\\n",
+       "0          3           0        0.081526  ...               False   \n",
+       "1          4           0        0.051791  ...               False   \n",
+       "2          4           0        0.089232  ...               False   \n",
+       "3          0           0        0.138488  ...               False   \n",
+       "4          3           0        2.641769  ...               False   \n",
+       "\n",
+       "   Content_Type_Video  Region_Brazil  Region_Canada  Region_Germany  \\\n",
+       "0                True          False          False           False   \n",
+       "1               False          False          False           False   \n",
+       "2                True           True          False           False   \n",
+       "3               False          False          False           False   \n",
+       "4               False           True          False           False   \n",
+       "\n",
+       "   Region_India  Region_Japan  Region_UK  Region_USA  Engagement_Level_Encoded  \n",
+       "0         False         False       True       False                         1  \n",
+       "1          True         False      False       False                         0  \n",
+       "2         False         False      False       False                         1  \n",
+       "3         False         False      False       False                         1  \n",
+       "4         False         False      False       False                         2  \n",
+       "\n",
+       "[5 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_encoded.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "089367a0",
+   "metadata": {},
+   "source": [
+    "#### Saving Processed Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "708e83af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed data saved to data/processed/processed_data.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Views</th>\n",
+       "      <th>Likes</th>\n",
+       "      <th>Shares</th>\n",
+       "      <th>Comments</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Is_Weekend</th>\n",
+       "      <th>Likes_Per_View</th>\n",
+       "      <th>Shares_Per_View</th>\n",
+       "      <th>Comments_Per_View</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Content_Type_Tweet</th>\n",
+       "      <th>Content_Type_Video</th>\n",
+       "      <th>Region_Brazil</th>\n",
+       "      <th>Region_Canada</th>\n",
+       "      <th>Region_Germany</th>\n",
+       "      <th>Region_India</th>\n",
+       "      <th>Region_Japan</th>\n",
+       "      <th>Region_UK</th>\n",
+       "      <th>Region_USA</th>\n",
+       "      <th>Engagement_Level_Encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4163464</td>\n",
+       "      <td>339431</td>\n",
+       "      <td>53135</td>\n",
+       "      <td>19346</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.081526</td>\n",
+       "      <td>0.012762</td>\n",
+       "      <td>0.004647</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4155940</td>\n",
+       "      <td>215240</td>\n",
+       "      <td>65860</td>\n",
+       "      <td>27239</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.051791</td>\n",
+       "      <td>0.015847</td>\n",
+       "      <td>0.006554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3666211</td>\n",
+       "      <td>327143</td>\n",
+       "      <td>39423</td>\n",
+       "      <td>36223</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.089232</td>\n",
+       "      <td>0.010753</td>\n",
+       "      <td>0.009880</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>917951</td>\n",
+       "      <td>127125</td>\n",
+       "      <td>11687</td>\n",
+       "      <td>36806</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.138488</td>\n",
+       "      <td>0.012732</td>\n",
+       "      <td>0.040096</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64866</td>\n",
+       "      <td>171361</td>\n",
+       "      <td>69581</td>\n",
+       "      <td>6376</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.641769</td>\n",
+       "      <td>1.072688</td>\n",
+       "      <td>0.098295</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Views   Likes  Shares  Comments  Month  DayOfWeek  Is_Weekend  \\\n",
+       "0  4163464  339431   53135     19346      1          3           0   \n",
+       "1  4155940  215240   65860     27239      5          4           0   \n",
+       "2  3666211  327143   39423     36223      1          4           0   \n",
+       "3   917951  127125   11687     36806     12          0           0   \n",
+       "4    64866  171361   69581      6376      3          3           0   \n",
+       "\n",
+       "   Likes_Per_View  Shares_Per_View  Comments_Per_View  ...  \\\n",
+       "0        0.081526         0.012762           0.004647  ...   \n",
+       "1        0.051791         0.015847           0.006554  ...   \n",
+       "2        0.089232         0.010753           0.009880  ...   \n",
+       "3        0.138488         0.012732           0.040096  ...   \n",
+       "4        2.641769         1.072688           0.098295  ...   \n",
+       "\n",
+       "   Content_Type_Tweet  Content_Type_Video  Region_Brazil  Region_Canada  \\\n",
+       "0               False                True          False          False   \n",
+       "1               False               False          False          False   \n",
+       "2               False                True           True          False   \n",
+       "3               False               False          False          False   \n",
+       "4               False               False           True          False   \n",
+       "\n",
+       "   Region_Germany  Region_India  Region_Japan  Region_UK  Region_USA  \\\n",
+       "0           False         False         False       True       False   \n",
+       "1           False          True         False      False       False   \n",
+       "2           False         False         False      False       False   \n",
+       "3           False         False         False      False       False   \n",
+       "4           False         False         False      False       False   \n",
+       "\n",
+       "   Engagement_Level_Encoded  \n",
+       "0                         1  \n",
+       "1                         0  \n",
+       "2                         1  \n",
+       "3                         1  \n",
+       "4                         2  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Drop original non-numeric columns that are not needed for modeling\n",
+    "cols_to_drop = ['Post_Date', 'Engagement_Level']\n",
+    "df_final = df_encoded.drop(columns=cols_to_drop)\n",
+    "\n",
+    "# Save to CSV\n",
+    "output_path = 'data/processed/processed_data.csv'\n",
+    "df_final.to_csv(output_path, index=False)\n",
+    "print(f\"Processed data saved to {output_path}\")\n",
+    "display(df_final.head())"
    ]
   }
  ],
